--- a/src/css.css
+++ b/src/css.css
@@ -9,6 +9,28 @@
 ::--webkit--scrool {
   background: transparent;
 }
+.currency-selecto {
+  display: flex;
+ justify-content: space-between;
+  cursor: pointer;
+}
+
+.currency-selecto img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: border 0.3s;
+  object-fit: cover;
+}
+
+.currency-selecto img.selected{
+  border-color: #84e5f7;
+  
+   /* Change to your preferred highlight color */
+  
+}
 
 body {
   background: url(./img/—Pngtree—summer\ atmosphere\ restaurant\ supermarket\ vegetable_1098004.jpg)
@@ -53,13 +75,15 @@ header > .h1 > h1 {
   background-color: rgba(253, 253, 253, 0.5);
   backdrop-filter: blur(30px);
   border-radius: 30px;
-  width: 344px;
+  width: 380px;
   overflow-y: scroll;
 }
 #app::-webkit-scrollbar {
   width: 2px;
 }
-
+.und{
+  margin-left: 10px;
+}
 #app::-webkit-scrollbar-track {
   background-color: transparent;
 }
@@ -90,10 +114,12 @@ button i {
 
 #todo-form {
   display: flex;
+  justify-content: space-between;
 }
 
 input {
   width: 80px;
+  height: 23px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -103,22 +129,20 @@ input {
 }
 label {
   font-weight: bolder;
-
-  margin-bottom: 10px;
 }
 #todo-list {
   list-style-type: none;
   padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
   row-gap: 10px;
   margin-top: 10px;
 }
 #todo-list li {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 10px;
 }
 
@@ -145,10 +169,10 @@ label {
 }
 
 .unit {
-  margin-left: 14px;
+  margin-left: 20px;
 }
 .total-prodt {
-  margin-left: 27px;
+  margin-left: 29px;
 }
 @media screen and (max-width: 870px) {
   #app {
@@ -163,6 +187,15 @@ label {
   }
 
   .und {
-    margin-left: 2px;
+    margin-left: 12px;
   }
+}
+@media screen and (max-width: 416px) {
+  #app {
+    width: 580px;
+    height: 600px;
+    margin-top: 169px;
+  }
+
+ 
 }
